# piboo-monorepo

./: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ipp-poc/: index.ts  package.json  pnpm-lock.yaml
noderscam/: Cargo.toml  README.md  index.d.ts  lib.d.ts  lib.js  package.json  test.js
noderscam/npm/linux-arm64-gnu/: README.md  package.json
noderscam/npm/linux-x64-gnu/: README.md  package.json
noderscam/src/: lib.rs
piboo/: .env.electron  .env.web  README.md  electron-builder.yml  package.json
piboo-server/: README.md  package.json  tsconfig.json
piboo-server/src/: index.ts  main.ts
piboo-server/src/model/: Configuration.ts
piboo-server/src/services/: Message.ts
piboo-server/src/ws-server/: index.ts
piboo-server/typings/: node-lp.ts
piboo-v2/: README.md  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json
piboo-v2/src/main/: appConfig.ts  index.ts
piboo-v2/src/renderer/: index.html
piboo-v2/typings/: node-lp.d.ts
piboo/public/: camera-worker.html  camera-worker.js  electron.js  printing-worker.html  printing-worker.js  storage-worker.js
piboo/src/: appConfig.ts  index.tsx
piboo/src/app/: appReducer.ts  (+5 more)
rscam-node-addon/: README.md  package.json
rscam-node-addon/lib/: index.d.ts  test.js
rscam-node-addon/native/: Cargo.toml
rscam-node-addon/native/.cargo/: config.toml
rscam-node-addon/native/src/: lib.rs
rust-node-builder-arm64v8/: .profile  Dockerfile  README.md
webcapture/: package.json  pnpm-lock.yaml
webcapture/src/: App.css  App.tsx
(+107 files in other folders)
