[package]
name = "rscam-node-addon"
version = "0.1.0"
authors = ["Christophe DELIQUAIRE <christophe.deliquaire@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "rscam_node_addon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.0"

[dependencies]
neon = "0.7.0"
v4l2-sys = "1.1.0"
rscam = "0.5.5"
